ampのインストール分割

--- a/playbook.yml
+++ b/playbook.yml
@@ -10,17 +10,4 @@
       selinux: state=disabled
     - name: stop iptables
       service: name=iptables state=stopped enabled=no
-    # EPEL/Remiをインストールする
-    - name: epel remi install
-      yum: name={{item}}
-      with_items:
-        - http://ftp-srv2.kddilabs.jp/Linux/distributions/fedora/epel/6/x86_64/epel-release-6-8.noarch.rpm
-        - http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
-    - name: install httpd
-      yum: name=httpd state=latest
-    - name: httpd started
-      service: name=httpd state=started enabled=yes
-    - name: install mysql
-      yum: name=mysql-server enablerepo=remi state=latest
-    - name: mysql started
-      service: name=mysqld state=started enabled=yes
+    - incluede: install_amp.yaml
